[package]
name = "rustml"
version = "0.1.0"
edition = "2021"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-nn = { git = "https://github.com/huggingface/candle.git", branch = "main" }
candle-transformers = { git = "https://github.com/huggingface/candle", branch = "main" }
tokenizers = "0.15.0"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
serde_json = "1.0.108"
lazy_static = "1.4.0"
serde = { version = "1.0.193", features = ["derive"] }
reqwest = "0.12.0"
regex = "1.10.2"
rand = "0.8.5"
hf-hub = { version = "0.3.2", features = ["tokio"] }
pgvector = { version = "0.3", features = ["postgres", "diesel", "serde"] }
diesel =  "2.1.5"
diesel-async = { version = "0.4.1", features = ["postgres"] }